feat(API): add route to get n last patches
